Moved DownloadView from general to core package.

--- a/test/test.html
+++ b/test/test.html
@@ -21,6 +21,7 @@
   <script src="mocha/mocha.js"></script>
   <script src="chai/chai.js"></script>
   <script src="sinon/pkg/sinon.js"></script>
+  <script src="js/classes.js"></script>
   <script src="test.js"></script>
 </body>
 </html>
