--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,26 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Earthquake Event Page</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <head>
+    <meta charset="utf-8">
+    <title>Earthquake Event Page</title>
+    <base href="/">
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Roboto+Mono:400|Merriweather:400,400italic,700|Material+Icons" rel="stylesheet">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <meta name="viewport"
+      content="width=device-width, initial-scale=1">
+    <link rel="icon"
+      type="image/x-icon"
+      href="favicon.ico">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic|Roboto+Mono:400|Merriweather:400,400italic,700|Material+Icons"
+      rel="stylesheet">
+    <script id="_fed_an_ua_tag"
+      async="async"
+      src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=DOI&amp;subagency=USGS&amp;pua=UA-7320779-1"></script>
+  </head>
+
+  <body>
+    <app-root></app-root>
+  </body>
+
 </html>
