--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Earthquake Event Page</title>
+    <title></title>
     <base href="/">
 
     <meta name="viewport"
