testing index.html for iOS9 and javascript disabled

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,14 @@
   </head>
 
   <body>
-    <app-root></app-root>
+    <app-root>
+      <div style="text-align:center;max-width: 500px;height: 200px;margin:50px auto;padding: 20px;font-family: 'Roboto'; font-size: 1.1em">
+        <p>To see our updated webpages, please upgrade your
+          browser and make sure Javascript is enabled.</p>
+        <p>View supported browsers/versions
+          <a href="https://angular.io/guide/browser-support">Here</a>.</p>
+      </div>
+    </app-root>
   </body>
 
 </html>
