--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,15 @@
 
   <body>
     <app-root>
-      <div style="text-align:center;max-width: 500px;height: 200px;margin:50px auto;
-            padding: 20px;font-family: 'Roboto'; font-size: 1.1em">
-        <p>To see our updated webpages, please upgrade your
-          browser and make sure Javascript is enabled.</p>
-        <p>View supported browsers/versions
-          <a href="https://angular.io/guide/browser-support">here</a>.</p>
+      <div>
+        <p>
+          The Earthquake Event Page application supports most recent browsers,
+          <a href="https://angular.io/guide/browser-support">view supported browsers</a>.
+        </p>
+        <p>
+          Or, try our
+          <a href="/earthquakes/feed/">Real-time Notifications, Feeds, and Web Services</a>.
+        </p>
       </div>
     </app-root>
   </body>
