--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,93 @@
     rel="stylesheet">
   <script id="_fed_an_ua_tag" async="async" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=DOI&amp;subagency=USGS&amp;pua=UA-7320779-1"></script>
 
+  <style>
+    /* spinner styles to display USGS logo and spinner */
+
+    body {
+      margin: 0;
+    }
+
+    app-toot {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .loading-header {
+      background-color: #3d5e80;
+      width: 100%;
+      height: 70px;
+      flex-direction: row;
+      justify-content: left;
+      display: flex;
+      align-items: center;
+    }
+
+    .loading-header .logo {
+      height: auto;
+      width: 120px;
+      margin-left: 1em;
+    }
+
+    .loading-content {
+      padding: 1em;
+      text-align: center;
+    }
+
+    .app-loading {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+    }
+
+    .app-loading .spinner {
+      height: 50vh;
+      width: 50vw;
+      animation: rotate 2s linear infinite;
+      transform-origin: center center;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      max-width: 30vh;
+    }
+
+    .app-loading .spinner .path {
+      stroke-dasharray: 1, 200;
+      stroke-dashoffset: 0;
+      animation: dash 1.5s ease-in-out infinite;
+      stroke-linecap: round;
+      stroke: #3d5e80;
+    }
+
+    @keyframes rotate {
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes dash {
+      0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+      }
+      50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+      }
+      100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+      }
+    }
+  </style>
+
 </head>
 
 <body>
@@ -20,24 +107,35 @@
   <!-- loading layout replaced by app after startupp -->
   <app-root>
 
-    <!-- Message for old iOS and non-javascript users -->
-    <p>
-      The Earthquake Event Page application supports most recent browsers,
-      <a href="https://angular.io/guide/browser-support">view supported browsers</a>.
-    </p>
-    <p>
-      Or, try our
-      <a href="/earthquakes/feed/">Real-time Notifications, Feeds, and Web Services</a>.
-    </p>
+    <!-- Fake header -->
+    <div class="loading-header">
+      <img class="logo" src="./assets/usgs-logo.svg"></img>
+    </div>
 
-    <!-- Loading spinner for slow connections -->
-    <div class="mask">
+    <div class="loading-content">
+
+      <!-- Javascript required -->
+      <noscript>
+        JavaScript is required to view this page.
+      </noscript>
+
+      <!-- Message for old iOS and non-javascript users -->
+      <p>
+        The Earthquake Event Page application supports most recent browsers,
+        <a href="https://angular.io/guide/browser-support">view supported browsers</a>.
+      </p>
+      <p>
+        Or, try our
+        <a href="/earthquakes/feed/">Real-time Notifications, Feeds, and Web Services</a>.
+      </p>
+
+      <!-- Loading spinner for slow connections -->
       <div class="app-loading">
-        <div class="logo"></div>
         <svg class="spinner" viewBox="25 25 50 50">
           <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10" />
         </svg>
       </div>
+
     </div>
 
   </app-root>
