Remove "No Event" message on event page template, display nothing. The loading page will handle cases where no event is returned

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Earthquake Event Page</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -109,7 +109,7 @@
 
     <!-- Fake header -->
     <div class="loading-header">
-      <img class="logo" src="./assets/usgs-logo.svg"></img>
+      <img class="logo" src="./assets/usgs-logo.svg" alt="U.S. Gelogical Survey logo"></img>
     </div>
 
     <div class="loading-content">
