Touched up some styles. Fixed header output.

--- a/src/index.html
+++ b/src/index.html
@@ -83,11 +83,15 @@
         }
 
         .app-loading>.instructions {
-          background-color: #eee;
+          background-color: rgba(255, 255, 255, 0.9);
+          border-radius: 2px;
           bottom: 0;
           display: block;
-          font-size: .7em;
+          font-family: Helvetica, sans-serif;
+          font-size: 0.88em;
           left: 0;
+          line-height: 1.5;
+          margin: 1em;
           padding: 0 1em;
           position: absolute;
           right: 0;
@@ -147,7 +151,8 @@
             browsers,
             <a href="https://angular.io/guide/browser-support">view supported
               browsers</a>.
-            <br />
+          </p>
+          <p>
             Or, try our
             <a href="/earthquakes/feed/">Real-time Notifications, Feeds, and
               Web
